--- a/README.rdoc
+++ b/README.rdoc
@@ -1,19 +1,15 @@
 = bio-affy
 
-Description goes here.
+Affymetrix microarray file format parser (CEL/CDF) for Ruby.
 
-== Contributing to bio-affy
- 
-* Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet
-* Check out the issue tracker to make sure someone already hasn't requested it and/or contributed it
-* Fork the project
-* Start a feature/bugfix branch
-* Commit and push until you are happy with your contribution
-* Make sure to add tests for it. This is important so I don't break it in a future version unintentionally.
-* Please try not to mess with the Rakefile, version, or history. If you want to have your own version, or is otherwise necessary, that is fine, but please isolate to its own commit so I can cherry-pick around it.
+== Introduction
+
+This is a port of the Biolib-1.0 Affy parser for the Ruby FFI, which
+in turn was an adaption of Ben Bolstad's work in R. 
 
 == Copyright
 
-Copyright (c) 2011 Pjotr Prins. See LICENSE.txt for
-further details.
+Copyright (C) 2011 Pjotr Prins <pjotr.prins@thebird.nl> 
+
+See LICENSE.txt for further details.
 
