--- a/README.rdoc
+++ b/README.rdoc
@@ -25,6 +25,22 @@ Next run the tool with
 
   bio-affy --help
 
+This module was written with 
+
+  ruby 1.9.3p0 (2011-10-30 revision 33570) [x86_64-linux]
+  Using rake (0.9.2.2) 
+  Using bundler (1.0.21) 
+  Using diff-lcs (1.1.3) 
+  Using ffi (1.0.11) 
+  Using git (1.2.5) 
+  Using jeweler (1.6.4) 
+  Using mkrf (0.2.3) 
+  Using rcov (0.9.11) 
+  Using rspec-core (2.7.1) 
+  Using rspec-expectations (2.7.0) 
+  Using rspec-mocks (2.7.0) 
+  Using rspec (2.7.0) 
+
 == Copyright
 
 Copyright (C) 2011 Pjotr Prins <pjotr.prins@thebird.nl> 
