--- a/README.rdoc
+++ b/README.rdoc
@@ -1,16 +1,19 @@
 = bio-affy
 
+Affymetrix microarray file format parser (CEL/CDF) for Ruby.
+
 WARNING: This software is currently being developed! For using the API
 see https://github.com/pjotrp/bioruby-affy/blob/master/spec/bio-affy_spec.rb
 
-Affymetrix microarray file format parser (CEL/CDF) for Ruby.
-
 == Introduction
 
-This is a port of the Biolib-1.0 Affy parser for the Ruby FFI, which
-in turn, is an adaptation of Ben Bolstad's work for R. 
+This is a port of the Biolib-1.0 Affy parser, which in turn is an
+adaptation of Ben Bolstad's work for R/Bioconductor.
 
-To use this tool you do not need to know Ruby.
+This implementation allows processing one or more microarrays at a
+time. It is not necessary to load all microarrays in RAM.
+
+To use the command line tool you do not need to know Ruby.
 
 == Install
 
@@ -29,18 +32,18 @@ Next run the tool with
 This module was written with 
 
   ruby 1.9.3p0 (2011-10-30 revision 33570) [x86_64-linux]
-  Using rake (0.9.2.2) 
-  Using bundler (1.0.21) 
-  Using diff-lcs (1.1.3) 
-  Using ffi (1.0.11) 
-  Using git (1.2.5) 
-  Using jeweler (1.6.4) 
-  Using mkrf (0.2.3) 
-  Using rcov (0.9.11) 
-  Using rspec-core (2.7.1) 
-  Using rspec-expectations (2.7.0) 
-  Using rspec-mocks (2.7.0) 
-  Using rspec (2.7.0) 
+    Using rake (0.9.2.2) 
+    Using bundler (1.0.21) 
+    Using diff-lcs (1.1.3) 
+    Using ffi (1.0.11) 
+    Using git (1.2.5) 
+    Using jeweler (1.6.4) 
+    Using mkrf (0.2.3) 
+    Using rcov (0.9.11) 
+    Using rspec-core (2.7.1) 
+    Using rspec-expectations (2.7.0) 
+    Using rspec-mocks (2.7.0) 
+    Using rspec (2.7.0) 
 
 == Copyright
 
